Trouble shooted some errors with the drawing of the sine wave and corrected the intervals error for it

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta na
+    me="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet"/>
     <title>My site</title>
 </head>
@@ -11,6 +12,10 @@
     <div id="container">
         <input type="text" id="input">
         <button id="submit" onclick="handle()"> Press here </button>
+        <canvas id="canvas">
+
+            
+        </canvas>
     </div>
     <script src="main.js"></script>
 </body>
