Added a color changer for the wave, added a function to allow the user to change the amplitude of the wave depending on the volume. Added timepernote and length variables and implented them in order to clean up how long each note is played

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <div id="container">
         <input type="text" id="input">
         <button id="submit" onclick="handle()"> Press here </button>
+        <input type="color" id="color" value="ff0000"> 
+        <input type="range" min="1" max="100" value="100" id="vol-slider">
+
         <canvas id="canvas">
 
-            
         </canvas>
     </div>
     <script src="main.js"></script>
