Added the recording function, added a recording button, fixed bugs regarding the recording function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="submit" onclick="handle()"> Press here </button>
         <input type="color" id="color" value="ff0000"> 
         <input type="range" min="1" max="100" value="100" id="vol-slider">
+        <button id="record" onclick="toggle()"> Start Recording </button>
 
         <canvas id="canvas">
 
