--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <meta na
     me="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet"/>
-    <title>My site</title>
+    <title>my site</title>
 </head>
 <body>
 
     <div id="container">
         <input type="text" id="input">
-        <button id="submit" onclick="handle()"> Press here </button>
+        <button id="submit" onclick="handle()"> press here </button>
         <input type="color" id="color" value="ff0000"> 
         <input type="range" min="1" max="100" value="100" id="vol-slider">
-        <button id="record" onclick="toggle()"> Start Recording </button>
+        <button id="record" onclick="toggle()"> start recording </button>
+
+        <label>Fill Color:</label>
+        <select id="fill-color-select">
+            <option value="#ff0040">pink</option>
+            <option value="#00ff80">green</option>
+            <option value="#4080ff">blue</option>
+            <option value="#ff8000">orange</option>
+            <option value="#8000ff">purple</option>
+            <option value="#ffff00">yellow</option>
+
 
         <canvas id="canvas">
-
+            
         </canvas>
     </div>
     <script src="main.js"></script>
