--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>my site</title>
 </head>
 <body>
+    <div>
+        <img src="assets/background.jpg" class="bg-full">
+    </div>
+
+
     <div id="container">
 
         <div class="controls">
